fix base.html navbar bug causing scrolling - caused by incorrect x-overflow setting

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,7 +69,6 @@ body {
 
 .list-inline {
     flex-wrap: nowrap !important;
-    overflow-x: auto !important;
 }
 
 .navbar.navbar-light {
